8195799: Use System logger instead of platform logger in javafx modules
Reviewed-by: kcr, mchung, dfuchs, jvos