@@ -1581,16 +1581,11 @@ allprojects {
 
 // Qualified exports needed by javafx.* modules (excluding javafx.swing)
 def qualExportsCore = [
-    "--add-exports=java.base/sun.util.logging=javafx.base",
-    "--add-exports=java.base/sun.util.logging=javafx.controls",
-    "--add-exports=java.base/sun.util.logging=javafx.fxml",
-    "--add-exports=java.base/sun.util.logging=javafx.graphics",
     "--add-exports=java.desktop/sun.print=javafx.graphics",
 ]
 
 // Qualified exports needed by javafx.swing
 def qualExportsSwing = [
-        "--add-exports=java.base/sun.util.logging=javafx.swing",
         "--add-exports=java.desktop/java.awt.dnd.peer=javafx.swing",
         "--add-exports=java.desktop/sun.awt=javafx.swing",
         "--add-exports=java.desktop/sun.awt.dnd=javafx.swing",
@@ -2130,9 +2125,6 @@ project(":controls") {
             "-DCSS_META_DATA_TEST_DIR=$cssDir"
     }
 
-    List<String> css2BinAddExports = [
-            '--add-exports=java.base/sun.util.logging=javafx.graphics',
-            ]
     def modulePath = "${project.sourceSets.main.java.outputDir}"
     modulePath += File.pathSeparator + "${rootProject.projectDir}/modules/javafx.graphics/build/classes/java/main"
     modulePath += File.pathSeparator + "${rootProject.projectDir}/modules/javafx.base/build/classes/java/main"
@@ -2149,7 +2141,6 @@ project(":controls") {
                 jvmArgs += patchModuleArgs
                 jvmArgs += "--module-path=$modulePath"
                 jvmArgs += "--add-modules=javafx.graphics"
-                jvmArgs += css2BinAddExports
                 main = "com.sun.javafx.css.parser.Css2Bin"
                 args css
             }
